<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".loginandregister.LogInAndRegister">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:background="@drawable/university_banner_upang" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/etEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:maxLength="80"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="right"
        android:textColor="@android:color/holo_red_light"
        android:text="TextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLength="35"
            android:textColorHint="@color/gray2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="invisible"
        android:gravity="end"
        android:textColor="@android:color/holo_red_light"
        android:text="TextView" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@color/primary_color"
        android:text="@string/sign_in"
        android:textSize="16sp" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:layout_weight="1"-->
<!--            app:srcCompat="@drawable/line" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="@string/or" />-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:layout_weight="1"-->
<!--            app:srcCompat="@drawable/line" />-->
<!--    </LinearLayout>-->


<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/btnSignInWithGoogle"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:clickable="true"-->
<!--        android:elevation="0dp"-->
<!--        app:cardElevation="1dp">-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:orientation="horizontal">-->

<!--            <ImageView-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                app:srcCompat="@drawable/google_symbol" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginRight="10dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Sign in with Google"-->
<!--                android:textSize="13sp" />-->


<!--        </LinearLayout>-->

<!--    </androidx.cardview.widget.CardView>-->

    <TextView
        android:id="@+id/btnForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="#FFFFFF" />

    <TextView
        android:id="@+id/tvNoAccountRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:text="Don't have an account? Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/dark_gray"
        android:textStyle="normal" />

</LinearLayout>
</ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/gray2"/>
</FrameLayout>