<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".loginandregister.Register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_gravity="center"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"

                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/etFullNameRegister"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:maxLength="35"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvFullNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:gravity="end"
                android:visibility="invisible"
                android:textColor="@android:color/holo_red_light"
                android:text="Error"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:endIconMode="clear_text">

                <EditText
                    android:maxLength="80"
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:visibility="invisible"
                android:textColor="@android:color/holo_red_light"
                android:text="Error"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/etPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:maxLength="35"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:visibility="invisible"
                android:textColor="@android:color/holo_red_light"
                android:text="Error"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/etPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="35"
                    android:background="@color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordConfirmationError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:visibility="invisible"
                android:textColor="@android:color/holo_red_light"
                android:text="Error"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/primary_color"
                android:text="@string/register"
                android:textSize="16sp" />

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:orientation="horizontal">-->

<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:layout_weight="1"-->
<!--                    app:srcCompat="@drawable/line" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/or" />-->

<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:layout_weight="1"-->
<!--                    app:srcCompat="@drawable/line" />-->
<!--            </LinearLayout>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/btnSignInWithGoogle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="15dp"-->
<!--                android:clickable="true"-->
<!--                android:elevation="0dp"-->
<!--                app:cardElevation="1dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageView-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        app:srcCompat="@drawable/google_symbol" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:layout_marginRight="10dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:text="Sign in with Google"-->
<!--                        android:textSize="13sp" />-->


<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->


            <TextView
                android:id="@+id/tvRegisterTermsAndPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="By signing up, you agree to our Terms, and Data Policy." />

            <TextView
                android:id="@+id/tvHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#FFFFFF"
                android:text="Have an account? Sign in here"
                android:textAllCaps="false"
                android:textColor="@color/black" />





        </LinearLayout>
    </ScrollView>


</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/gray2" />
</FrameLayout>